---
source: tests/cli.rs
expression: output
---
# Importers

## xlsx (importer)

Imports Excel Spreadsheets where each line is a token, the other columns are
spans and merged cells can be used for spans that cover more than one token.

*Configuration*

| name                | description                                                                                               |
|---------------------|-----------------------------------------------------------------------------------------------------------|
| column_map          | Maps token columns to annotation columns. If there is more than one                                       |
|                     | token column, it is assumed that the corpus has multiple segmentations.                                   |
|                     | In this case, it is necessary to tell the importer which annotation column belongs to which token column. |
|                     |                                                                                                           |
|                     | Example with the two token columns "dipl" and "norm":                                                     |
|                     |                                                                                                           |
|                     | ```toml                                                                                                   |
|                     | [import.config]                                                                                           |
|                     | column_map = {"dipl" = ["sentence"], "norm" = ["pos", "lemma", "seg"]}                                    |
|                     | ```                                                                                                       |
|                     | The column "sentence" must be always be aligned with the "dipl" token                                     |
|                     | and "pos", "lemma" and "seg" are aligned with the "norm" token.                                           |
| fallback            | If given, the name of the token column to be used when there is no                                        |
|                     | explicit mapping given in the `column_map` parameter for this annotation                                  |
|                     | column.                                                                                                   |
|                     |                                                                                                           |
|                     | Example with two token columns "dipl" and "norm", where all annotation                                    |
|                     | columns except "lemma" and "pos" are mapped to the "dipl" token column:                                   |
|                     |                                                                                                           |
|                     | ```toml                                                                                                   |
|                     | [import.config]                                                                                           |
|                     | column_map = {"dipl" = [], "norm" = ["pos", "lemma"]}                                                     |
|                     | fallback = "dipl"                                                                                         |
|                     | ```                                                                                                       |
| data                | Optional value of the Excel sheet that contains the data. If not given,                                   |
|                     | the first sheet is used. Instead of providing a string or index, a sequence                               |
|                     | of strings or indices can be provided. Even if the sequence is of length 1,                               |
|                     | the corpus graph will contain sub-document nodes to which the referring                                   |
|                     | sheet data is attached.                                                                                   |
|                     |                                                                                                           |
|                     | The lowest corpus nodes are corresponding to xlsx files. Only the sheet with                              |
|                     | name "data" is imported:                                                                                  |
|                     | ```toml                                                                                                   |
|                     | data = "data"                                                                                             |
|                     | ```                                                                                                       |
|                     |                                                                                                           |
|                     | The lowest corpus nodes are corresponding to xlsx files. Only the third sheet                             |
|                     | will be imported:                                                                                         |
|                     | ```toml                                                                                                   |
|                     | data = 3                                                                                                  |
|                     | ```                                                                                                       |
|                     |                                                                                                           |
|                     | The lowest corpus nodes refer to sheets in xlsx files attached to file nodes.                             |
|                     | Three sheets will be imported (if they exist):                                                            |
|                     | ```toml                                                                                                   |
|                     | data = ["data", 0, "additional_data"]                                                                     |
|                     | ```                                                                                                       |
|                     |                                                                                                           |
|                     | The lowest corpus nodes refer to sheets in xlsx files attached to file nodes.                             |
|                     | Only one subdocument will be created (if the sheet "data" exists):                                        |
|                     | ```toml                                                                                                   |
|                     | data = ["data"]                                                                                           |
|                     | ```                                                                                                       |
| metadata            | Optional value of the Excel sheet that contains the metadata table. If                                    |
|                     | no metadata is imported.                                                                                  |
| metasheet_skip_rows | Skip the first given rows in the meta data sheet.                                                         |
| token_annos         | Map the given annotation columns as token annotations and not as span if possible.                        |
| evaluate            | If formulas should be evaluated (false by default), set this to true. If false,                           |
|                     | a cell entry will be treated as text value including the `=`.                                             |

# Exporters

## xlsx (exporter)

Exports Excel Spreadsheets where each line is a token, the other columns are
spans and merged cells can be used for spans that cover more than one token.

*Configuration*

| name                 | description                                                                             |
|----------------------|-----------------------------------------------------------------------------------------|
| include_namespace    | If `true`, include the annotation namespace in the column header.                       |
| annotation_order     | Specify the order of the exported columns as array of annotation keys.                  |
|                      |                                                                                         |
|                      | Example:                                                                                |
|                      |                                                                                         |
|                      | ```toml                                                                                 |
|                      | [export.config]                                                                         |
|                      | annotation_order = ["tok", "lemma", "pos"]                                              |
|                      | ```                                                                                     |
|                      |                                                                                         |
|                      | Has no effect if the vector is empty.                                                   |
| skip_unchanged_files | If an output file for a document already exists and the content seems to                |
|                      | be the same, don't overwrite the output file.                                           |
|                      |                                                                                         |
|                      | Even with the same content, Excel files will appear as changed for                      |
|                      | version control systems because the binary files will be different. When                |
|                      | this configuration value is set, the existing file will read and                        |
|                      | compared to the file that will be generated before overwriting it.                      |
| document_key         | Set this to a sheet index or name to only update the data (not metadata)                |
|                      | in an existing workbook and not write a completely new file. If no target               |
|                      | file exists, a new workbook is created.                                                 |
| sheet_key            | The lowest corpus nodes can be interpreted as providing sheet instead of file data.     |
|                      | This requires the sheet nodes to point to nodes in the PartOf component, that hold      |
|                      | the document key (directly or indirectly). If no document key node is found, the export |
|                      | will fail.                                                                              |
